refactor: update markup and layout structure

--- a/index.html
+++ b/index.html
@@ -39,78 +39,79 @@
     </section>
 
     <!-- Section 2: Components -->
-    <section class="section component-display" id="components">
-
-        <div class="header-block">
-            <h2 class="section-title">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԲԱՂԱԴՐԻՉՆԵՐ</h2>
-        </div>
-
-        <p class="location-text">
-            Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8/11 շենք
-        </p>
-
-        <!-- MAIN IMAGE -->
-        <div class="component-image-wrapper">
-
-            <img id="mainPlanImg" class="main-plan-img" src="/src/images/full/1.webp" alt="Architectural Plan" />
-
-            <button class="main-arrow prev" aria-label="Previous image">‹</button>
-            <button class="main-arrow next" aria-label="Next image">›</button>
-
-            <div class="image-caption">
-                <div class="doc-row">
-                    <button class="doc-item" type="button" onclick="viewPDF('files/9 ՃՀԱ էսքիզ.pdf', 'Սխեմա')">
-                        <span>Էսքիզային առաջադրանք</span>
-                    </button>
-
-                    <a class="doc-download" href="files/9 ՃՀԱ էսքիզ.pdf" download onclick="event.stopPropagation()">
-                        <svg class="download-ico" viewBox="0 0 24 24">
-                            <path d="M12 3v10m0 0l4-4m-4 4L8 9M5 21h14" fill="none" stroke="currentColor"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </a>
-                </div>
+    <section class="section bg" id="components">
+        <div class="component-display">
+            <div class="header-block">
+                <h2 class="section-title">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԲԱՂԱԴՐԻՉՆԵՐ</h2>
             </div>
-        </div>
 
-        <!-- THUMBNAILS (SWIPER) -->
-        <div class="gallery-wrapper">
+            <p class="location-text">
+                Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8/11 շենք
+            </p>
 
-            <button class="gallery-arrow prev" aria-label="Previous">‹</button>
+            <!-- MAIN IMAGE -->
+            <div class="component-image-wrapper">
 
-            <div class="gallery-strip swiper">
-                <div class="gallery-track swiper-wrapper">
+                <img id="mainPlanImg" class="main-plan-img" src="/src/images/full/1.webp" alt="Architectural Plan" />
 
-                    <div class="swiper-slide">
-                        <img class="thumb is-active" src="/src/images/thumbs/2.webp"
-                            data-full="/src/images/full/2.webp" />
+                <button class="main-arrow prev" aria-label="Previous image">‹</button>
+                <button class="main-arrow next" aria-label="Next image">›</button>
+
+                <div class="image-caption">
+                    <div class="doc-row">
+                        <button class="doc-item" type="button" onclick="viewPDF('files/9 ՃՀԱ էսքիզ.pdf', 'Սխեմա')">
+                            <span>Էսքիզային առաջադրանք</span>
+                        </button>
+
+                        <a class="doc-download" href="files/9 ՃՀԱ էսքիզ.pdf" download onclick="event.stopPropagation()">
+                            <svg class="download-ico" viewBox="0 0 24 24">
+                                <path d="M12 3v10m0 0l4-4m-4 4L8 9M5 21h14" fill="none" stroke="currentColor"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </a>
                     </div>
-
-                    <div class="swiper-slide">
-                        <img class="thumb" src="/src/images/thumbs/3.webp" data-full="/src/images/full/3.webp" />
-                    </div>
-
-                    <div class="swiper-slide">
-                        <img class="thumb" src="/src/images/thumbs/4.webp" data-full="/src/images/full/4.webp" />
-                    </div>
-
-                    <div class="swiper-slide">
-                        <img class="thumb" src="/src/images/thumbs/5.webp" data-full="/src/images/full/5.webp" />
-                    </div>
-
-                    <div class="swiper-slide">
-                        <img class="thumb" src="/src/images/thumbs/6.webp" data-full="/src/images/full/6.webp" />
-                    </div>
-
-                    <div class="swiper-slide">
-                        <img class="thumb" src="/src/images/thumbs/7.webp" data-full="/src/images/full/7.webp" />
-                    </div>
-
                 </div>
             </div>
 
-            <button class="gallery-arrow next" aria-label="Next">›</button>
+            <!-- THUMBNAILS (SWIPER) -->
+            <div class="gallery-wrapper">
 
+                <button class="gallery-arrow prev" aria-label="Previous">‹</button>
+
+                <div class="gallery-strip swiper">
+                    <div class="gallery-track swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <img class="thumb is-active" src="/src/images/thumbs/2.webp"
+                                data-full="/src/images/full/2.webp" />
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img class="thumb" src="/src/images/thumbs/3.webp" data-full="/src/images/full/3.webp" />
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img class="thumb" src="/src/images/thumbs/4.webp" data-full="/src/images/full/4.webp" />
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img class="thumb" src="/src/images/thumbs/5.webp" data-full="/src/images/full/5.webp" />
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img class="thumb" src="/src/images/thumbs/6.webp" data-full="/src/images/full/6.webp" />
+                        </div>
+
+                        <div class="swiper-slide">
+                            <img class="thumb" src="/src/images/thumbs/7.webp" data-full="/src/images/full/7.webp" />
+                        </div>
+
+                    </div>
+                </div>
+
+                <button class="gallery-arrow next" aria-label="Next">›</button>
+
+            </div>
         </div>
     </section>
 
