--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
 
                 <div class="image-caption">
                     <div class="doc-row">
-                        <button class="doc-item" type="button" onclick="viewPDF('files/9 ՃՀԱ էսքիզ.pdf', 'Սխեմա')">
+                        <button class="doc-item" type="button"
+                            onclick="viewPDF('https://drive.google.com/file/d/11Cv-kejB1d1Gd4JFQl6_eYo__18cJwNs/preview', 'Սխեմա')">
                             <span>Էսքիզային առաջադրանք</span>
                         </button>
 
-                        <a class="doc-download" href="files/9 ՃՀԱ էսքիզ.pdf" download onclick="event.stopPropagation()">
+                        <a class="doc-download" href="https://drive.google.com/uc?id=11Cv-kejB1d1Gd4JFQl6_eYo__18cJwNs&export=download" download onclick="event.stopPropagation()">
                             <svg class="download-ico" viewBox="0 0 24 24">
                                 <path d="M12 3v10m0 0l4-4m-4 4L8 9M5 21h14" fill="none" stroke="currentColor"
                                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
