--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <script type="module" src="/src/js/main.js"></script>
+    <link rel="stylesheet" href="/src/css/main.css">
+    <script type="module" src="/src/js/main.js" defer></script>
 
 
 
