fix: images path

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <!-- MAIN IMAGE -->
             <div class="component-image-wrapper">
 
-                <img id="mainPlanImg" class="main-plan-img" src="./images/full/1.webp" alt="Architectural Plan" />
+                <img id="mainPlanImg" class="main-plan-img" src="/images/full/1.webp" alt="Architectural Plan" />
 
                 <button class="main-arrow prev" aria-label="Previous image">‹</button>
                 <button class="main-arrow next" aria-label="Next image">›</button>
@@ -85,28 +85,28 @@
                     <div class="gallery-track swiper-wrapper">
 
                         <div class="swiper-slide">
-                            <img class="thumb is-active" src="./images/thumbs/2.webp"
-                                data-full="./images/full/2.webp" />
+                            <img class="thumb is-active" src="/images/thumbs/2.webp"
+                                data-full="/images/full/2.webp" />
                         </div>
 
                         <div class="swiper-slide">
-                            <img class="thumb" src="./images/thumbs/3.webp" data-full="./images/full/3.webp" />
+                            <img class="thumb" src="/images/thumbs/3.webp" data-full="/images/full/3.webp" />
                         </div>
 
                         <div class="swiper-slide">
-                            <img class="thumb" src="./images/thumbs/4.webp" data-full="./images/full/4.webp" />
+                            <img class="thumb" src="/images/thumbs/4.webp" data-full="/images/full/4.webp" />
                         </div>
 
                         <div class="swiper-slide">
-                            <img class="thumb" src="./images/thumbs/5.webp" data-full="./images/full/5.webp" />
+                            <img class="thumb" src="/images/thumbs/5.webp" data-full="/images/full/5.webp" />
                         </div>
 
                         <div class="swiper-slide">
-                            <img class="thumb" src="./images/thumbs/6.webp" data-full="./images/full/6.webp" />
+                            <img class="thumb" src="/images/thumbs/6.webp" data-full="/images/full/6.webp" />
                         </div>
 
                         <div class="swiper-slide">
-                            <img class="thumb" src="./images/thumbs/7.webp" data-full="./images/full/7.webp" />
+                            <img class="thumb" src="/images/thumbs/7.webp" data-full="/images/full/7.webp" />
                         </div>
 
                     </div>
