--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Armenian:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/src/css/main.css">
-    <script type="module" src="/src/js/main.js" defer></script>
+    <script type="module" src="/src/main.js" defer></script>
 
 
 
