feat: add click-to-zoom for main image

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             <!-- MAIN IMAGE -->
             <div class="component-image-wrapper">
 
-                <img id="mainPlanImg" class="main-plan-img" src="./images/full/1.webp" alt="Architectural Plan" />
-                <button class="zoom-btn" type="button" aria-label="Увеличить">⤢</button>
+                <img id="mainPlanImg" class="main-plan-img zoom-btn" src="./images/full/1.webp" alt="Architectural Plan" />
                 <button class="main-arrow prev" aria-label="Previous image">‹</button>
                 <button class="main-arrow next" aria-label="Next image">›</button>
 
