refactor: tidy up HTML, CSS, and SVG

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
 
     <!-- Section 2: Components -->
-    <section class="section bg" id="components">
+    <section id="components" class="section bg" >
         <div class="component-display">
             <div class="header-block">
                 <h2 class="section-title">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԲԱՂԱԴՐԻՉՆԵՐ</h2>
@@ -118,7 +118,7 @@
 
 
     <!-- Section 3: Details & Documents -->
-    <section id="details" class="section">
+    <section id="details" class="section bg">
         <div class="container split-view">
             <div class="text-content">
                 <h3 class="section-title">ՄԱՐԶ ԼՈՌԻ, ՀԱՄԱՅՆՔ ՎԱՆԱՁՈՐ ՎԱՆԱՁՈՐ Ք. ԲԱՆԱԿԻ ՓՈՂՈՑ </h3>
@@ -348,7 +348,7 @@
 
 
     <!-- Section 4: Valuation -->
-    <section id="valuation" class="section  ">
+    <section id="valuation" class="section bg ">
         <div class="container text-center">
             <h2 class="section-title gold">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԳՆԱՀԱՏՈՒՄ</h2>
             <div class="price-box">
