--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <nav class="main-header__nav" aria-label="Հիմնական նավիգացիա">
                 <ul>
                     <li><a href="#components">Փաթեթի բաղադրիչներ</a></li>
-                    <li><a href="#details">Նկարագրություն</a></li>
+                    <li><a href="#details">Փաստաթղթեր</a></li>
                     <li><a href="#valuation">Գնահատում</a></li>
                 </ul>
             </nav>
@@ -49,7 +49,7 @@
         <nav class="mobile-menu" aria-label="Բջջային նավիգացիա">
             <ul>
                 <li><a href="#components">Փաթեթի բաղադրիչներ</a></li>
-                <li><a href="#details">Նկարագրություն</a></li>
+                <li><a href="#details">Փաստաթղթեր</a></li>
                 <li><a href="#valuation">Գնահատում</a></li>
             </ul>
         </nav>
@@ -62,7 +62,12 @@
         <section id="hero" class="section hero-section bg">
             <div class="hero-content">
                 <h1 class="hero-title">PROSPECT 24</h1>
-                <p class="hero-subtitle">ԱՆՇԱՐԺ ԳՈՒՅՔԻ ԶԱՐԳԱՑՄԱՆ ՆԱԽԱԳԾԵՐԻ ԻՐԱԿԱՆԱՑՈՒՄ</p>
+                <p class="hero-subtitle" id="typingText">
+                    ԱՆՇԱՐԺ ԳՈՒՅՔԻ
+                    ԶԱՐԳԱՑՄԱՆ ՆԱԽԱԳԾԵՐԻ
+                    ԻՐԱԿԱՆԱՑՈՒՄ
+                </p>
+
             </div>
         </section>
 
@@ -79,30 +84,36 @@
 
                 <!-- MAIN IMAGE -->
                 <div class="component-image-wrapper">
-
                     <img id="mainPlanImg" class="main-plan-img zoom-btn" src="./images/full/1.webp"
                         alt="Architectural Plan" />
+
                     <button class="main-arrow prev" aria-label="Previous image">‹</button>
                     <button class="main-arrow next" aria-label="Next image">›</button>
 
                     <div class="image-caption">
-                        <div class="doc-row">
-                            <button class="doc-item" type="button"
-                                onclick="viewPDF('https://drive.google.com/file/d/11Cv-kejB1d1Gd4JFQl6_eYo__18cJwNs/preview', 'Սխեմա')">
-                                <span>Էսքիզային առաջադրանք</span>
-                            </button>
+                        <div class="caption-bg">
+                            <div class="doc-row">
+                                <div class="doc-item">
+                                    <button type="button"
+                                        onclick="viewPDF('https://drive.google.com/file/d/11Cv-kejB1d1Gd4JFQl6_eYo__18cJwNs/preview', 'Սխեմա')">
+                                        <span>Էսքիզային առաջադրանք</span>
+                                    </button>
 
-                            <a class="doc-download"
-                                href="https://drive.google.com/uc?id=11Cv-kejB1d1Gd4JFQl6_eYo__18cJwNs&export=download"
-                                download onclick="event.stopPropagation()">
-                                <svg class="download-ico" viewBox="0 0 24 24">
-                                    <path d="M12 3v10m0 0l4-4m-4 4L8 9M5 21h14" fill="none" stroke="currentColor"
-                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
-                            </a>
+                                    <a class="doc-download"
+                                        href="https://drive.google.com/uc?id=11Cv-kejB1d1Gd4JFQl6_eYo__18cJwNs&export=download"
+                                        download onclick="event.stopPropagation()">
+                                        <svg class="download-ico" viewBox="0 0 24 24">
+                                            <path d="M12 3v10m0 0l4-4m-4 4L8 9M5 21h14" fill="none"
+                                                stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+
 
                 <!-- THUMBNAILS (SWIPER) -->
                 <div class="gallery-wrapper">
@@ -376,8 +387,23 @@
                             </a>
                         </div>
                     </div>
-
+                    <div class="doc-row-all-download">
+                        <div class="doc-row doc-row-all">
+                            <a href="./files/all_documents.rar" download>
+                                <button>Ներբեռնել բոլորը</button>
+                            </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="w-4 h-4">
+                                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                                <polyline points="7 10 12 15 17 10"></polyline>
+                                <line x1="12" x2="12" y1="15" y2="3"></line>
+                            </svg>
+                        </div>
+                    </div>
                 </div>
+
+
             </div>
         </section>
 
@@ -403,12 +429,12 @@
                 <div class="modal-header">
                     <h3 id="modal-title">Փաստաթուղթ</h3>
                     <div class="modal-controls">
-                        <a id="download-link" href="#" download class="btn-action">Ներբեռնել</a>
+                        <a id="download-link" href="" download class="btn-action">Ներբեռնել</a>
                         <button class="btn-close" onclick="closeModal()">X</button>
                     </div>
                 </div>
                 <div class="modal-body">
-                    <iframe id="pdf-frame" src="#" frameborder="0"></iframe>
+                    <iframe id="pdf-frame" src="" frameborder="0"></iframe>
                 </div>
             </div>
         </div>
