--- a/index.html
+++ b/index.html
@@ -411,9 +411,8 @@
         <!-- Section 4: Valuation -->
         <section id="valuation" class="section bg ">
             <div class="container text-center">
-                <h2 class="section-title gold">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԳՆԱՀԱՏՈՒՄ</h2>
+                <h2 class="section-title gold metal-text">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԳՆԱՀԱՏՈՒՄ</h2>
                 <div class="price-box">
-                    <span class="badge-large">13</span>
                     <span class="price-value">500,000,000 ՀՀ դրամ</span>
                 </div>
                 <div class="valuation-images">
