style: update text typography and visual texture properties

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section id="components" class="section bg">
             <div class="component-display">
                 <div class="header-block">
-                    <h2 class="section-title">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԲԱՂԱԴՐԻՉՆԵՐ</h2>
+                    <h2 class="section-title metal-text">ՆԵՐԴՐՈՒՄԱՅԻՆ ՓԱԹԵԹԻ ԲԱՂԱԴՐԻՉՆԵՐ</h2>
                 </div>
 
                 <p class="location-text">
