--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- LOGO -->
             <a href="#hero" class="main-header__logo">
                 <div class="logo">
-                    <img src="/public/images/Prospect24-logo.png" alt="Logo">
+                    <img src="/images/logo.png" alt="Logo">
                 </div>
             </a>
 
