feat: update hero block styles and layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Navigation Bar -->
     <header class="main-header">
-        <div class="main-header__inner" >
+        <div class="main-header__inner">
             <!-- LOGO -->
             <a href="#hero" class="main-header__logo">
                 <div class="logo">
@@ -59,13 +59,16 @@
 
 
         <!-- Section 1: Hero -->
-        <section id="hero" class="section hero-section bg">
+        <section id="hero" class="section hero-section bg-yerevan">
             <div class="hero-content">
-                <h1 class="hero-title">PROSPECT24</h1>
-                <p class="hero-subtitle" id="typingText">
-                    ԱՆՇԱՐԺ ԳՈՒՅՔԻ
-                    ԶԱՐԳԱՑՄԱՆ ՆԱԽԱԳԾԵՐԻ
-                    ԻՐԱԿԱՆԱՑՈՒՄ
+                <div class="hero-logo">
+                    <img src="/images/zinanshan.svg" alt="zinanshan">
+                </div>
+
+                <p class="hero-subtitle text-image" id="typingText">
+                    ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
+                    ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
+                    ՓԱԹԵԹ
                 </p>
 
             </div>
