--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
                     <img src="/images/zinanshan.svg" alt="zinanshan">
                 </div>
 
-                <p class="hero-subtitle text-image" id="typingText">
-                    ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
-                    ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
-                    ՓԱԹԵԹ
-                </p>
+                <div class="hero-text">
+                    <h1 class="hero-title">ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
+                        ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
+                        ՓԱԹԵԹ</h1>
+
+                </div>
 
             </div>
         </section>
@@ -202,7 +203,9 @@
                 </div>
 
                 <div class="document-list">
-
+                    <div class="header-block">
+                        <p class="bold-white">Փաստաթղթեր</p>
+                    </div>
                     <div class="doc-row">
                         <div class="doc-item" type="button" onclick="viewPDF('./files/1վկայական.pdf', 'Վկայական')">
                             <span>Վկայական</span>
