style: update details block text

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="document-list">
-                    <div class="header-block">
+                    <div class="header-document">
                         <p class="bold-white">Փաստաթղթեր</p>
                     </div>
                     <div class="doc-row">
