style: update details.css

--- a/index.html
+++ b/index.html
@@ -169,11 +169,13 @@
                     <h3 class="h3-bold-white">ՄԱՐԶ ԼՈՌԻ, ՀԱՄԱՅՆՔ ՎԱՆԱՁՈՐ ՎԱՆԱՁՈՐ Ք. ԲԱՆԱԿԻ ՓՈՂՈՑ </h3>
                     <div class="info-block">
                         <div class="content-block">
-                            <p>1․ Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8-4 հիվանդանոցային համալիր
+                            <p class="left-shadow">1․ Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8-4
+                                հիվանդանոցային համալիր
                                 մասնաշենքը
                                 առկա
                                 է ենթակայան, որը վերազինվելու է և սպասարկելու է Բանակի փողոց 8/11 հասցեի գույքերին։</p>
-                            <p>2․ Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8/11 շենք հասցեում գտնվող
+                            <p class="left-shadow">2․ Մարզ Լոռի, համայնք Վանաձոր Վանաձոր ք. Բանակի փողոց 8/11 շենք
+                                հասցեում գտնվող
                                 շինությունները
                                 վերկառուցվելու են և օգտագործվելու են որպես հասարակական կառույցներ։ Գոյություն ունեցող
                                 շենք՝
