--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         <section id="hero" class="section hero-section bg-yerevan">
             <div class="hero-content">
                 <div class="hero-logo">
-                    <img src="/images/zinanshan.svg" alt="zinanshan">
+                    <!-- <img src="/images/zinanshan.svg" alt="zinanshan"> -->
                 </div>
-
+<!-- 
                 <div class="hero-text">
                     <h1 class="hero-title">ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
                         ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
                         ՓԱԹԵԹ</h1>
 
-                </div>
+                </div> -->
 
             </div>
         </section>
