--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
 
 
         <!-- Section 1: Hero -->
-        <section id="hero" class="section hero-section bg-yerevan">
+        <section id="hero" class="hero-section bg-yerevan">
             <div class="hero-content">
                 <div class="hero-logo">
                     <!-- <img src="/images/zinanshan.svg" alt="zinanshan"> -->
                 </div>
-<!-- 
+
                 <div class="hero-text">
                     <h1 class="hero-title">ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
                         ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
                         ՓԱԹԵԹ</h1>
 
-                </div> -->
+                </div>
 
             </div>
         </section>
