change  background image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             </div>
         </section>
-        <div class="background">
+        <div id="bg" class="background">
             <!-- Section 2: Components -->
             <section id="components" class="section">
                 <div class="component-display">
