Add width and height to image

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                     <!-- MAIN IMAGE -->
                     <div class="component-image-wrapper">
                         <img id="mainPlanImg" class="main-plan-img zoom-btn" src="./images/full/1.webp"
-                            alt="Գլխավոր նախագծային պլանի պատկեր" loading="eager" decoding="async">
+                            alt="Գլխավոր նախագծային պլանի պատկեր" loading="eager" decoding="async" width="1200"
+                            height="900">
 
 
                         <button class="main-arrow prev" type="button" aria-label="Նախորդ պատկեր">‹</button>
@@ -128,32 +129,33 @@
 
                                 <div class="swiper-slide">
                                     <img class="thumb is-active" src="./images/thumbs/2.webp"
-                                        data-full="./images/full/2.webp" alt="Պատկեր 1" loading="lazy" decoding="async">
+                                        data-full="./images/full/2.webp" alt="Պատկեր 1" loading="lazy" decoding="async"
+                                        width="800" height="600">
                                 </div>
 
                                 <div class="swiper-slide">
                                     <img class="thumb" src="./images/thumbs/3.webp" data-full="./images/full/3.webp"
-                                        alt="Պատկեր 2" loading="lazy" decoding="async">
+                                        alt="Պատկեր 2" loading="lazy" decoding="async" width="800" height="600">
                                 </div>
 
                                 <div class="swiper-slide">
                                     <img class="thumb" src="./images/thumbs/4.webp" data-full="./images/full/4.webp"
-                                        alt="Պատկեր 3" loading="lazy" decoding="async">
+                                        alt="Պատկեր 3" loading="lazy" decoding="async" width="800" height="600">
                                 </div>
 
                                 <div class="swiper-slide">
                                     <img class="thumb" src="./images/thumbs/5.webp" data-full="./images/full/5.webp"
-                                        alt="Պատկեր 4" loading="lazy" decoding="async">
+                                        alt="Պատկեր 4" loading="lazy" decoding="async" width="800" height="600">
                                 </div>
 
                                 <div class="swiper-slide">
                                     <img class="thumb" src="./images/thumbs/6.webp" data-full="./images/full/6.webp"
-                                        alt="Պատկեր 5" loading="lazy" decoding="async">
+                                        alt="Պատկեր 5" loading="lazy" decoding="async" width="800" height="600">
                                 </div>
 
                                 <div class="swiper-slide">
                                     <img class="thumb" src="./images/thumbs/7.webp" data-full="./images/full/7.webp"
-                                        alt="Պատկեր 6" loading="lazy" decoding="async">
+                                        alt="Պատկեր 6" loading="lazy" decoding="async" width="800" height="600">
                                 </div>
 
                             </div>
@@ -472,7 +474,7 @@
             <div class="zoom-overlay" id="zoomOverlay" aria-hidden="true">
                 <div class="zoom-container">
                     <button class="zoom-close" type="button" aria-label="Փակել">✕</button>
-                    <img class="zoom-image" id="zoomImage" alt="դիտում" />
+                    <img class="zoom-image" id="zoomImage" alt="դիտում" width="1400" height="1200" />
                     <button class="zoom-arrow prev" type="button" aria-label="Նախորդ">‹</button>
                     <button class="zoom-arrow next" type="button" aria-label="Հաջորդ">›</button>
                 </div>
