--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <section id="hero" class="hero-section">
             <div class="hero-content">
                 <div class="hero-text">
+                    <div class="hero-logo">
+                        <img src="/images/logo.png" alt="Լոգո">
+                    </div>
                     <h1 class="hero-title">ՊԵՏԱԿԱՆ ԳՈՒՅՔԻ
                         ՕՏԱՐՄԱՆ ՆԵՐԴՐՈՒՄԱՅԻՆ
                         ՓԱԹԵԹ</h1>
@@ -478,7 +481,7 @@
         </div>
     </main>
 
-
+ 
     <footer class="footer">
         <p>&copy; 2025 PROSPECT 24</p>
     </footer>
