--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+
+
     <!-- Navigation Bar -->
     <header class="main-header">
         <div class="main-header__inner">
@@ -483,9 +485,45 @@
     </main>
 
 
+
+
     <footer class="footer">
         <p>&copy; 2025 PROSPECT 24</p>
     </footer>
+
+    
+    <!-- Settings -->
+    <div class="settings">
+        <button class="settings__toggle" type="button">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="3" />
+                <path
+                    d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
+            </svg>
+        </button>
+
+        <div class="settings__inner is-hidden">
+            <button class="settings__close" type="button">✕</button>
+
+            <div class="settings__group">
+                <span class="settings__label">ՏԵՔՍՏԻ ՉԱՓ</span>
+                <div class="settings__actions">
+                    <button type="button" data-size="0.85" class="settings__btn">A-</button>
+                    <button type="button" data-size="1" class="settings__btn active">A</button>
+                    <button type="button" data-size="1.2" class="settings__btn">A+</button>
+                </div>
+            </div>
+
+            <div class="settings__group">
+                <span class="settings__label">ԳՈՒՆԱՅԻՆ ԹԵՄԱ</span>
+                <div class="settings__actions">
+                    <button type="button" data-theme="light" class="settings__btn active">Լուսավոր</button>
+                    <button type="button" data-theme="dark" class="settings__btn">Մութ</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
