feat(mobile): update document links and implement responsive CSS styles

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav class="mobile-menu" aria-label="Բջջային նավիգացիա">
             <ul>
                 <li><a href="#components">Փաթեթի բաղադրիչներ</a></li>
-                <li><a href="#details">Փաստաթղթեր</a></li>
+                <li><a href="#documents">Փաստաթղթեր</a></li>
                 <li><a href="#valuation">Գնահատում</a></li>
             </ul>
         </nav>
@@ -225,7 +225,7 @@
 
 
 
-                <aside class="document-content">
+                <aside id="documents" class="document-content">
                     <div class="document-header">
                         <p class="bold-white">Փաստաթղթեր</p>
                     </div>
@@ -491,7 +491,7 @@
         <p>&copy; 2025 PROSPECT 24</p>
     </footer>
 
-    
+
     <!-- Settings -->
     <div class="settings">
         <button class="settings__toggle" type="button">
